--- a/client/.env
+++ b/client/.env
@@ -1,2 +1,2 @@
-VITE_API_URL=http://localhost:5000/api
+VITE_API_URL=https://mini-e-commerce-website-pqtj.onrender.com/api
 VITE_RAZORPAY_KEY_ID=rzp_test_SKhgVvNEmQ38uv
